--- a/style.css
+++ b/style.css
@@ -43,3 +43,19 @@ select option {
 #webcam-button {
     background-color: transparent; border: none;
 }
+
+.modal-xl .modal-content {
+    font-size: 1.5rem; /* Adjust as needed */
+}
+
+.modal-xl .modal-title {
+    font-size: 2rem; /* Adjust as needed */
+}
+
+.modal-xl .btn {
+    font-size: 1.5rem; /* Adjust as needed */
+}
+
+.modal-xl .dropdown-toggle {
+    font-size: 1.5rem; /* Adjust as needed */
+}
